--- a/src/geodash/plugins/base/config.yml
+++ b/src/geodash/plugins/base/config.yml
@@ -39,6 +39,7 @@ filters:
   - common/default_if_undefined_or_blank.js
   - common/extract.js
   - common/inArray.js
+  - common/not.js
   - common/prepend.js
   - common/ternary.js
   - common/ternary_defined.js
@@ -68,3 +69,4 @@ schemas:
   - featurelayers.yml
   - controls.yml
   - view.yml
+  - pages.yml
