support for uglify and minified files in static build system; added sidebar toggles; other minor changes

--- a/src/geodash/plugins/base/config.yml
+++ b/src/geodash/plugins/base/config.yml
@@ -52,7 +52,7 @@ filters:
   - format/formatFloat.js
   - format/formatInteger.js
   - format/formatArray.js
-  - format/formatMonth.js m
+  - format/formatMonth.js
   - math/eq.js
   - math/lte.js
   - math/gte.js
