--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,8 @@ plugins:
   - about
   - download
   - overlays
+  - sidebar_toggle_left
+  - sidebar_toggle_right
 dependencies:
   production:
     project: []
@@ -21,14 +23,6 @@ dependencies:
       - "./src/js/main/*.js"
       - "./src/js/polyfill/*.js"
 resources:
-  - name: angular.js
-    path: "./lib/angularjs/{{ version }}/angular.js"
-  - name: angular-route.js
-    path: "./lib/angularjs/{{ version }}/angular-route.js"
-  - name: angular-sanitize.js
-    path: "./lib/angularjs/{{ version }}/angular-sanitize.js"
-  - name: angular-cookies.js
-    path: "./lib/angularjs/{{ version }}/angular-cookies.js"
   - name: jquery-ui.min.css
     path: ./lib/jquery-ui/1.11.4/jquery-ui.min.css
   - name: select2.min.css
@@ -45,26 +39,47 @@ resources:
     path: ./lib/Leaflet.label/leaflet-master/leaflet.label.css
   - name: font-awesome.min.css
     path: ./lib/font-awesome/4.5.0/css/font-awesome.min.css
+  - name: angular.js
+    path: "./lib/angularjs/{{ version }}/angular.js"
+    minified: "./lib/angularjs/{{ version }}/angular.min.js"
+  - name: angular-route.js
+    path: "./lib/angularjs/{{ version }}/angular-route.js"
+    minified: "./lib/angularjs/{{ version }}/angular-route.min.js"
+  - name: angular-sanitize.js
+    path: "./lib/angularjs/{{ version }}/angular-sanitize.js"
+    minified: "./lib/angularjs/{{ version }}/angular-sanitize.min.js"
+  - name: angular-cookies.js
+    path: "./lib/angularjs/{{ version }}/angular-cookies.js"
+    minified: "./lib/angularjs/{{ version }}/angular-cookies.min.js"
   - name: jquery.js
     path: "./lib/jquery/{{ version }}/jquery-{{ version }}.js"
+    minified: "./lib/jquery/{{ version }}/jquery-{{ version }}.min.js"
   - name: jquery-ui.js
     path: "./lib/jquery-ui/{{ version }}/jquery-ui.js"
+    minified: "./lib/jquery-ui/{{ version }}/jquery-ui.min.js"
   - name: yaml.js
     path: "./lib/yamljs/develop/dist/yaml.js"
+    minified: "./lib/yamljs/develop/dist/yaml.min.js"
   - name: select2.full.js
-    path: "./lib/select2/select2-{{ version}}/dist/js/select2.full.js"
-  - name: typeahead.custom.js
-    path: "./lib/typeahead/typeahead-custom.js"
+    path: "./lib/select2/select2-{{ version }}/dist/js/select2.full.js"
+    minified: "./lib/select2/select2-{{ version }}/dist/js/select2.full.min.js"
+  - name: typeahead.js
+    path: "./lib/typeahead/{{ version }}/typeahead-{{ version }}.js"
   - name: bootstrap.js
     path: "./lib/bootstrap/{{ version }}/dist/js/bootstrap.js"
+    minified: "./lib/bootstrap/{{ version }}/dist/js/bootstrap.min.js"
   - name: d3.js
     path: "./lib/d3/{{ version }}/d3.js"
+    minified: "./lib/d3/{{ version }}/d3.min.js"
   - name: c3.js
     path: "./lib/c3/{{ version }}/c3.js"
+    minified: "./lib/c3/{{ version }}/c3.min.js"
   - name: leaflet-src.js
     path: "./lib/leaflet/{{ version }}/leaflet-src.js"
+    minified: "./lib/leaflet/{{ version }}/leaflet.js"
   - name: leaflet.utfgrid-src.js
     path: "./lib/Leaflet.utfgrid/dist/leaflet.utfgrid-src.js"
+    minified: "./lib/Leaflet.utfgrid/dist/leaflet.utfgrid.js"
   - name: wfp-simpleheat.js
     path: "./lib/Leaflet.heat/custom/wfp-simpleheat.js"
   - name: wfp-heatcanvas.js
@@ -73,5 +88,7 @@ resources:
     path: "./lib/Leaflet.heat/custom/wfp-heatlayer.js"
   - name: leaflet.label-src.js
     path: "./lib/Leaflet.label/leaflet-master/leaflet.label-src.js"
+    minified: "./lib/Leaflet.label/leaflet-master/leaflet.label.js"
   - name: showdown.js
     path: "./lib/showdown/{{ version }}/showdown.js"
+    minified: "./lib/showdown/{{ version }}/showdown.min.js"
