--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "private": "false",
   "devDependencies": {
     "del": "*",
+    "merge": "*",
     "gulp": "^3.9.0",
     "gulp-util": "*",
     "gulp-angular-templatecache": "^1.8.0",
@@ -25,6 +26,7 @@
     "gulp-rename": "*",
     "gulp-uglify": "*",
     "path": "*",
+    "expand-home-dir": "*",
     "yamljs": "^0.2.7",
     "yargs": "*"
   }
