multiple enhancements, features, and fixes
1.  WMTS Support
2.  Modals in build pipeline (geodash.meta.modals in build)
3.  Refractored schemas to recursive sub-objects
4.  Moved GeoDash config modal to geodash-server
5.  Marked overlays as non-editable (needed regression.  add back in later).
6.  typeahead inputs now support "baselayers" as source
7.  Minor api featuers (geodash.api.*)
8.  Popup enhnacements

--- a/config.yml
+++ b/config.yml
@@ -89,6 +89,9 @@ resources:
   - name: leaflet.label-src.js
     path: "./lib/Leaflet.label/leaflet-master/leaflet.label-src.js"
     minified: "./lib/Leaflet.label/leaflet-master/leaflet.label.js"
+  - name: leaflet.TileLayer.WMTS.js
+    path: "./lib/leaflet.TileLayer.WMTS/{{ version }}/leaflet-tilelayer-wmts-src.js"
+    minified: "./lib/leaflet.TileLayer.WMTS/{{ version }}/leaflet-tilelayer-wmts.js"
   - name: showdown.js
     path: "./lib/showdown/{{ version }}/showdown.js"
     minified: "./lib/showdown/{{ version }}/showdown.min.js"
