--- a/src/geodash/plugins/base/schemas/baselayers.yml
+++ b/src/geodash/plugins/base/schemas/baselayers.yml
@@ -7,7 +7,7 @@ baselayers:
   description: "Base layers available."
   schema:
     verbose_singular: Base Layer
-    verbose_plurl: Base Layers
+    verbose_plural: Base Layers
     fields:
       - id: id
         type: text
@@ -39,15 +39,70 @@ baselayers:
         placeholder: source attribution
         required: true
         description: "The attribution of the source of base layer."
-      - id: "source.url"
-        type: text
-        label: Source URL
-        placeholder: source URL
-        required: true
-        description: "The url of the source of base layer."
       - id: "legend.label"
         type: text
         label: Legend Label
         placeholder: legend label
         required: true
         description: "The label for the legend."
+      - id: "source.type"
+        type: text
+        label: Source Type
+        placeholder: tiles, mapbox, gwc
+        required: false
+        description: "The type of the feature layer (tiles,mapbox)."
+        options:
+          - tiles
+          - mapbox
+          - gwc
+      - id: "source.tile.url"
+        type: text
+        label: Tile URL
+        placeholder: Tile URL
+        required: true
+        description: "The tile url of the source of base layer."
+        when:
+          field: source.type
+          values:
+            - tile
+            - tiles
+      - id: "source.mapbox.access_token"
+        type: text
+        label: Public MapBox Access Token
+        placeholder: pk.XYZ
+        required: false
+        description: "Your public MapBox access token."
+        when:
+          field: source.type
+          values:
+            - mapbox
+      - id: "source.mapbox.layers"
+        type: text
+        label: MapBox Layers
+        placeholder: mapbox.streets
+        required: false
+        description: "MapBox layers"
+        when:
+          field: source.type
+          values:
+            - mapbox
+      - id: "source.gwc.url"
+        type: text
+        label: GWC URL
+        placeholder: http://example.com/geoserver/gwc
+        required: false
+        description: "GWC URL"
+        when:
+          field: source.type
+          values:
+            - gwc
+      - id: "source.gwc.layers"
+        type: text
+        label: GWC Layers
+        placeholder: GWC Layers
+        required: false
+        description: "GWC layers"
+        when:
+          field: source.type
+          values:
+            - gwc
