--- a/src/geodash/plugins/base/schemas/pages.yml
+++ b/src/geodash/plugins/base/schemas/pages.yml
@@ -7,7 +7,7 @@ pages:
   description: "Pages.  Used for templating links to this and other systems."
   schema:
     verbose_singular: Pages
-    verbose_plurl: Pages
+    verbose_plural: Pages
     fields:
       - id: id
         type: text
@@ -15,9 +15,9 @@ pages:
         placeholder: ID
         required: true
         description: "The id of your page."
-      - id: type
+      - id: url
         type: text
         label: URL
         placeholder: url
         required: true
-        description: "The url of your page.  Can use angular interpolation and filters."
+        description: "The url of your page.  Can use Angular interpolation and filters."
