--- a/src/geodash/plugins/base/config.yml
+++ b/src/geodash/plugins/base/config.yml
@@ -86,22 +86,4 @@ schemas:
   - controls.yml
   - view.yml
   - pages.yml
-modals:
-  - name: dashboard_config
-    ui:
-      mainClass: ""
-      tabs:
-        - target: modal-dashboard-config-projects
-          label: Projects
-        - target: modal-dashboard-config-plugins
-          label: Plugins
-        - target: modal-dashboard-config-directives
-          label: Directives
-        - target: modal-dashboard-config-templates
-          label: Templates
-        - target: modal-dashboard-config-filters
-          label: Filters
-        - target: modal-dashboard-config-yaml
-          label: YAML
-        - target: modal-dashboard-config-json
-          label: JSON
+modals: []
