cql_filter; minor fixes & improvements;

--- a/src/geodash/plugins/base/schemas/featurelayers.yml
+++ b/src/geodash/plugins/base/schemas/featurelayers.yml
@@ -123,6 +123,12 @@ featurelayers:
               placeholder: layers
               required: false
               description: "The wms layers of the feature layer."
+            - id: cql_filter
+              type: text
+              label: CQL Filter
+              placeholder: "PERSONS > 15000000"
+              required: false
+              description: "The CQL Filter to apply to the WMS GetMap requests."
             - id: url
               type: text
               label: WMS URL
