--- a/src/geodash/plugins/base/schemas/featurelayers.yml
+++ b/src/geodash/plugins/base/schemas/featurelayers.yml
@@ -5,6 +5,11 @@ featurelayers:
   placeholder: "Feature Layers"
   required: true
   description: "Feature layers available."
+  search:
+    output: obj  # Output path for matching obj, so it's obj.obj, instead of obj.id, or obj.text
+    templates:
+      suggestion: WMSLayer  # default is 'default'.  Links to geodash.typeahead.templates.suggestion.*
+    datasets: WMSServers
   schema:
     verbose_singular: Feature Layer
     verbose_plural: Feature Layers
@@ -42,16 +47,17 @@ featurelayers:
         options:
           - none
           - basic
-      - id: "type"
+      - id: type
         type: text
         label: Type
-        placeholder: wms, wmts, geojson
+        placeholder: wms, wmts, geojson, tegola
         required: false
-        description: "The type of the feature layer (wms, wmts, geojson)."
+        description: "The type of the feature layer (wms, wmts, geojson, tegola)."
         options:
           - wms
           - wmts
           - geojson
+          - tegola
       - id: view.minZoom
         type: int
         label: View / Minimum Zoom
@@ -135,6 +141,8 @@ featurelayers:
               placeholder: "http://geonode.wfp.org/geoserver/geonode/wms"
               required: false
               description: "The url of the WMS server."
+              typeahead:
+                local: "wms"
       - id: "wmts.layers"
         type: text
         label: WMTS Layers
@@ -195,6 +203,65 @@ featurelayers:
           field: type
           values:
             - geojson
+      - id: tegola
+        type: object
+        label: Tegola
+        placeholder: "Tegola"
+        required: false
+        description: "Tegola configuration."
+        when:
+          field: type
+          values:
+            - tegola
+        schema:
+          verbose_singular: Tegola
+          fields:
+            - id: map
+              type: text
+              label: Map
+              placeholder: map
+              required: false
+              description: "The tegola map to show."
+            - id: url
+              type: text
+              label: Tegola Server URL
+              placeholder: "http://localhost:9090"
+              required: false
+              description: "The url of the tegola server."
+              typeahead:
+                local: "tegola"
+            - id: debug
+              type: text
+              label: Debug
+              placeholder: debug
+              required: false
+              description: "Debug.  If yes, will return border of each tile as vectors."
+      - id: heatmap
+        type: object
+        label: Heatmap
+        placeholder: "Heatmap"
+        required: false
+        description: "Heatmap configuration."
+        when:
+          field: type
+          values:
+            - wms
+            - geojson
+        schema:
+          verbose_singular: Heatmap
+          fields:
+            - id: blur
+              type: text
+              label: Heatmap Blur
+              placeholder: 15
+              required: false
+              description: "heatmap blur"
+            - id: radius
+              type: text
+              label: Heatmap Radius
+              placeholder: 5
+              required: false
+              description: "heatmap radius"
       - id: popup
         type: object
         label: Popup
